# nocturne-backend

./: .gitignore  .prettierrc.json  CMakeLists.txt  cross.sh  package-lock.json  package.json  run.sh  wrapperGen.hjson
ccSrc/jsInterface/: main.cc
ccSrc/jsInterface/src/: main.cc
ccSrc/lib/include/: ALSA.hh  Decoder.hh  Effector.hh  FFDecoder.hh  Metadata.hh  Provider.hh  Queue.hh  SpeedEffector.hh  WAVDecoder.hh  nocturne_types.hh
ccSrc/lib/src/: ALSA.cc  FFDecoder.cc  Queue.cc  SpeedEffector.cc  Test.cc  WAVDecoder.cc
src/: CCLibWrapper.ts  Nocturne.ts  Player.ts  index.ts
src/exe/: server.ts  test.ts
